--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>قالب معرفی اپلیکیشن اپکو | apco</title>
+    <title>قالب معرفی اپلیکیشن اپکو | Appco</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./fonts/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./fonts/fontawesome/css/all.min.css">  
+      <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
+
 </head>
 
 <body>
